updated and fix some alignet issues

--- a/src/index.css
+++ b/src/index.css
@@ -343,3 +343,13 @@ p {
     transform: translateY(-50%) scale(1.05);
   }
 }
+
+.home-page-h1 {
+  text-align: center;
+}
+
+.page-container {
+  transform: none !important;
+  perspective: none !important;
+  position: relative;
+}
